[package]
name = "vopono"
description = "Launch applications via VPN tunnels using temporary network namespaces"
version = "0.6.4"
authors = ["James McMurray <jamesmcm03@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/jamesmcm/vopono"
homepage = "https://github.com/jamesmcm/vopono"
readme = "README.md"
keywords = ["vopono", "vpn", "wireguard", "openvpn", "netns"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
anyhow = "1"
directories-next = "2"
log = "0.4"
pretty_env_logger = "0.4"
clap = "2"
which = "4"
users = "0.11"
nix = "0.19"
serde = {version = "1", features = ["derive", "std"]}
csv = "1"
dialoguer = {path = "dialoguer"}
regex = "1"
ron = "0.6"
walkdir = "2"
rand = "0.7"
toml = "0.5"
chrono = "0.4"
compound_duration = "1"
ipnet = {version = "2", features = ["serde"]}
reqwest = {default-features = false, version = "0.10", features = ["blocking", "json", "rustls-tls"]}
sysinfo = "0.15"
base64 = "0.13"
x25519-dalek = "1"
strum = "0.20"
strum_macros = "0.20"
zip = "0.5"
maplit = "1"
webbrowser = "0.5"
basic_tcp_proxy = "0.2"
signal-hook = "0.2"

[package.metadata.rpm]
package = "vopono"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
vopono = { path = "/usr/bin/vopono" }
