[package]
name = "vopono"
description = "Launch applications via VPN tunnels using temporary network namespaces"
version = "0.8.10"
authors = ["James McMurray <jamesmcm03@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/jamesmcm/vopono"
homepage = "https://github.com/jamesmcm/vopono"
readme = "README.md"
keywords = ["vopono", "vpn", "wireguard", "openvpn", "netns"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
anyhow = "1"
directories-next = "2"
log = "0.4"
pretty_env_logger = "0.4"
clap = "2"
which = "4"
users = "0.11"
nix = "0.23"
serde = {version = "1", features = ["derive", "std"]}
csv = "1"
dialoguer ="0.9"
regex = "1"
ron = "0.7"
walkdir = "2"
# Must use rand 0.7 for compatibility with x25519-dalek for now
rand = "0.7"
toml = "0.5"
chrono = "0.4"
compound_duration = "1"
ipnet = {version = "2", features = ["serde"]}
reqwest = {default-features = false, version = "0.11", features = ["blocking", "json", "rustls-tls"]}
sysinfo = "0.22"
base64 = "0.13"
x25519-dalek = "1"
strum = "0.23"
strum_macros = "0.23"
zip = "0.5"
maplit = "1"
webbrowser = "0.5"
basic_tcp_proxy = "0.3"
signal-hook = "0.3"
config = "0.11"
serde_json = "1"
bs58 = "0.4"

[package.metadata.rpm]
package = "vopono"

[package.metadata.deb]
maintainer = "James McMurray <jamesmcm03@gmail.com>"
recommends = "wireguard-tools, openvpn"
# Not supported in Github Actions image with cargo-deb yet
# suggests = "shadowsocks-libev, openfortivpn"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
vopono = { path = "/usr/bin/vopono" }
