[package]
name = "vopono"
description = "Launch applications via VPN tunnels using temporary network namespaces"
version = "0.10.15"
authors = ["James McMurray <jamesmcm03@gmail.com>"]
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/jamesmcm/vopono"
homepage = "https://github.com/jamesmcm/vopono"
readme = "README.md"
keywords = ["vopono", "vpn", "wireguard", "openvpn", "netns"]

[workspace]

[dependencies]
vopono_core = { path = "vopono_core" }
anyhow = "1"
directories-next = "2"
log = "0.4"
pretty_env_logger = "0.5"
clap = { version = "4", features = ["derive"] }
which = "8"
dialoguer = "0.12"
compound_duration = "1"
signal-hook = "0.3"
walkdir = "2"
chrono = "0.4"
bs58 = "0.5"
nix = { version = "0.30", features = ["signal", "process"] }
config = "0.15"
basic_tcp_proxy = "0.3.2"
strum = "0.27"
strum_macros = "0.27"
shellexpand = { version = "3", features = ["full"] }
shell-words = "1"

[package.metadata.rpm]
package = "vopono"

[package.metadata.deb]
maintainer = "James McMurray <jamesmcm03@gmail.com>"
recommends = "wireguard-tools, openvpn"
# Not supported in Github Actions image with cargo-deb yet
# suggests = "shadowsocks-libev, openfortivpn"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
vopono = { path = "/usr/bin/vopono" }
