[package]
name = "vopono_core"
description = "Library code for running VPN connections in network namespaces"
version = "0.1.7"
edition = "2021"
authors = ["James McMurray <jamesmcm03@gmail.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/jamesmcm/vopono"
homepage = "https://github.com/jamesmcm/vopono"
readme = "README.md"
keywords = ["vopono", "vpn", "wireguard", "openvpn", "netns"]

[dependencies]
anyhow = "1"
directories-next = "2"
log = "0.4"
which = "4"
users = "0.11"
nix = { version = "0.27", features = ["user", "signal", "fs", "process"] }
serde = { version = "1", features = ["derive", "std"] }
csv = "1"
regex = "1"
ron = "0.8"
walkdir = "2"
rand = "0.8"
toml = "0.7"
ipnet = { version = "2", features = ["serde"] }
reqwest = { default-features = false, version = "0.11", features = [
    "blocking",
    "json",
    "rustls-tls",
] } # TODO: Can we remove Tokio dependency?
sysinfo = "0.29"
base64 = "0.21"
x25519-dalek = { version = "2", features = ["static_secrets"] }
strum = "0.25"
strum_macros = "0.25"
zip = "0.6"
maplit = "1"
webbrowser = "0.8"
serde_json = "1"
signal-hook = "0.3"
sha2 = "0.10.6"
tiny_http = "0.12"
